--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <script type="text/javascript">
     (function(){
-      emailjs.init("imKYOoVsqFnUmnNwd"); // Replace with your EmailJS user ID
+      emailjs.init("G1hI7NiQ2LtNKZwoa"); // Replace with your EmailJS user ID
     })();
   </script>
   <style>
@@ -102,13 +102,13 @@
         article: document.getElementById("article").value,
         mentor: document.getElementById("mentor").value,
         mentor_email: document.getElementById("mentor_email").value,
-        link: "https://www.facebook.com/" // Replace with the actual link you want to include
+        link: "https://uwmadison.co1.qualtrics.com/jfe/form/SV_7W0ovVvDMgSttVI" // Replace with the actual link you want to include
       };
 
-      const mentorServiceID = "service_jvorvs4"; // Replace with your actual service ID for the mentor email
-      const mentorTemplateID = "template_bsiqglw"; // Replace with your actual template ID for the mentor email
-      const myServiceID = "service_jvorvs4"; // Replace with your actual service ID for your email
-      const myTemplateID = "template_fg92nvc"; // Replace with your actual template ID for your email
+      const mentorServiceID = "service_8beu2tc"; // Replace with your actual service ID for the mentor email
+      const mentorTemplateID = "template_7ph1ncy"; // Replace with your actual template ID for the mentor email
+      const myServiceID = "service_8beu2tc"; // Replace with your actual service ID for your email
+      const myTemplateID = "template_sgpnvyo"; // Replace with your actual template ID for your email
 
       // Send email to mentor
       emailjs.send(mentorServiceID, mentorTemplateID, {
